--- a/src/components/alg/alg-train/fatin/pages/elem-fatin-08.html
+++ b/src/components/alg/alg-train/fatin/pages/elem-fatin-08.html
@@ -11,7 +11,19 @@
 </article>
 
 
+<!-- Содержание -->
 <article class="article">
+  <h2>Содержание</h2>
+
+  <p><a href="#about">Связный список (Linked list)</a></p>
+  <p><a href="#dummy">Паттерн Dummy node (фейковый узел)</a></p>
+  <p><a href="#task1">Задача 1. Удалить N-ый узел с конца списка</a></p>
+  <p><a href="#task2">Задача 2. Объединить два связных списка в возрастающем порядке</a></p>
+</article>
+
+
+<article class="article">
+  <div class="anchor" id="about"></div>
   <h3>Связный список (Linked list)</h3>
 
   <p>Linked list - это структура данных, состоящая из узлов. В узле хранится его значение и указатель на следующий узел</p>
@@ -34,6 +46,7 @@ class LinkedList {
 
 
 <article class="article">
+  <div class="anchor" id="dummy"></div>
   <h3>Паттерн Dummy node (фейковый узел)</h3>
 
   <p><strong>Паттерн Dummy node</strong> упрощает решение для задач со связным списком. Добавим фейковую вершину перед головой списка. Эта фейковая вершина станет новой головой списка, которая будет указывать на настоящую голову. В таком случае, у нас всегда будет предыдущая вершина и удаление первой вершины не будет никаким исключением.</p>
@@ -47,7 +60,10 @@ class LinkedList {
 
 
 <article class="article">
+  <div class="anchor" id="task1"></div>
   <h3>Задача 1. Удалить N-ый узел с конца списка</h3>
+
+  <h4>Leetcode 19. Remove Nth Node From End of List</h4>
 
   <p>Дана голова связного списка и число N. Нужно удалить N-ый узел с конца. Вернуть получившийся список.</p>
   <p>N-ый узел гарантированно есть. N не может быть больше чем длина самого списка</p>
@@ -166,6 +182,7 @@ console.log(removeNode(list, 2));
 
 
 <article class="article">
+  <div class="anchor" id="task2"></div>
   <h3>Задача 2. Объединить два связных списка в возрастающем порядке</h3>
 
   <p>Даны два связных списка, которые отсортированы в возрастающем порядке. Вернуть новый список, который содержит все элементы из двух списков и отсортирован в возрастающем порядке.</p>
