--- a/src/components/alg/alg-train/fatin/pages/elem-fatin-13.html
+++ b/src/components/alg/alg-train/fatin/pages/elem-fatin-13.html
@@ -173,6 +173,11 @@ px   = [0, 2, 3, 6, 11, 15]
         0  1  2  3   4   5
 </pre>
 
+  <p>Паттерн состоит из двух этапов</p>
+  <ol>
+    <li>Инициализация. Создаем дополнительный префиксный массив - это структура данных, которая хранит сумму всех предыдущих элементов. При этом первый элемент 0, потому что у него нет предыдущих элементов.</li>
+    <li>Ответ на запрос суммы на отрезке за одну операцию - вычитание.</li>
+  </ol>
   <details>
     <summary>Алгоритм</summary>
     <h4>Создадим функцию pxArray(), которая принимает на вход массив и строит из него нужную структуру данных. На выходе префиксный массив</h4>
@@ -447,6 +452,8 @@ pxArray.prototype.multRange = function(left, right) {
   <div class="anchor" id="task3"></div>
   <h3>Задача 3. Индекс равных сумм</h3>
 
+  <h4>Leetcode. Find pivot index. Поиск опорного индекса.</h4>
+
   <p>Дан массив целых чисел nums. Нужно найти самый левый индекс элемента, такой, что сумма всех элементов справа и слева от него равны</p>
   <p>Если с какой-либо из сторон нет элементов - считаем сумму равной нулю, а если в массиве нет такого индекса, то нужно вернуть -1</p>
 
@@ -455,6 +462,10 @@ pxArray.prototype.multRange = function(left, right) {
   <code>Output: 2 // 7+3 = 5+5</code>
 
   <h4>Пример 2</h4>
+  <code>Input: nums = [3,5,-5]</code>
+  <code>Output: 0 // 0 = 5-5</code>
+
+  <h4>Пример 3</h4>
   <code>Input: nums = [0,0,0]</code>
   <code>Output: 0 // 0 = 0+0</code>
 
@@ -475,9 +486,11 @@ suf  =   [24, 17, 14, 10,  5, 0]
 
   <h4>Второй способ</h4>
   <p>Нам нужны два цикла от 0 до N</p>
-  <p>В первом цикле найдем сумму всех элементов - это 24</p>
-  <p>Во втором цикле будем определять сумму элементов слева ls и справа rs от текущего и сравнивать их.</p>
+  <p>В первом цикле найдем сумму всех элементов sum = 24</p>
+  <p>Во втором цикле будем определять сумму элементов слева ls и справа rs от текущего nums[i] и сравнивать их.</p>
+  <p>В начале сумма элементов слева ls = 0. Сумма элементов справа rs = sum - ls - nums[0]</p>
   <p>Если суммы равны, то ответом будет индекс текущего элемента</p>
+  <p>Если суммы не равны, то ls = ls + nums[i], и переходим к следующему элементу i = i + 1</p>
   <p>Сложность по времени O(N). Сложность по памяти O(1)</p>
 
   <details>
