--- a/src/components/alg/alg-train/fatin/pages/elem-fatin-14.html
+++ b/src/components/alg/alg-train/fatin/pages/elem-fatin-14.html
@@ -18,10 +18,14 @@
   <p><a href="#about">План на стрим</a></p>
   <p><a href="#neud">Как проходит типичное неудачное собеседование</a></p>
   <p><a href="#roadmap">Roadmap для BigTech по теме Sliding Window</a></p>
-  <p><a href="#task1">Задача 1. Максимальная сумма</a></p>
+  <p><a href="#task1">Задача 1. Максимальная сумма k элементов</a></p>
   <p><a href="#task2">Задача 2. Сжатие значений счетчика</a></p>
   <p><a href="#task3">Задача 3. Цепочка уникальных генов</a></p>
   <p><a href="#task4">Задача 4. Наглый подставной отчет</a></p>
+  <p><a href="#fix">Паттерн плавающее окно фиксированного размера</a></p>
+  <p><a href="#task5">Задача 5. Максимальное произведение</a></p>
+  <p><a href="#task6">Задача 6. Сжатие строки</a></p>
+  <p><a href="#slide">Паттерн не пересекающиеся плавающие окна</a></p>
 </article>
 
 
@@ -103,10 +107,10 @@
 </article>
 
 
-<!-- Задача 1. Максимальная сумма -->
+<!-- Задача 1. Максимальная сумма k элементов -->
 <article class="article">
   <div class="anchor" id="task1"></div>
-  <h3>Задача 1. Максимальная сумма</h3>
+  <h3>Задача 1. Максимальная сумма k элементов</h3>
 
   <p>Дан массив чисел nums  и число k. Нужно вернуть одно число - максимальную сумму k подряд идущих элементов</p>
 
@@ -276,6 +280,8 @@ func maxSum(nums []int, k int) int {
   <div class="anchor" id="task2"></div>
   <h3>Задача 2. Сжатие значений счетчика</h3>
 
+  <h4>Leetcode 228. Summary Ranges</h4>
+
   <p>Дан массив уникальных чисел counter, отсортированный по возрастанию, где counter[i] содержит значение метрики в i-ую секунду</p>
   <p>Смотреть на изменения счетчика очень сложно, особенно, когда массив counter очень большой, поэтому нужно объединить все подряд идущие числа на сколько это возможно</p>
   <p>Правила объединения (сжатия) достаточно простые: можно объединять только подряд идущие числа, например, [1,2,3,4] -> ["1->3", "7"]</p>
@@ -291,6 +297,226 @@ func maxSum(nums []int, k int) int {
   <code>Output: ["-2->-3"]</code>
 
   <h4>Паттерн не пересекающиеся плавающие окна</h4>
+
+  <p>Заведем два указателя l левый и r правый. Поставим их на первый элемент массива. Этот один элемент будет в нашем первом плавающем окне. Пока левый указатель не выйдет за границы массива, будем продолжать делать одни и те же действия. Пытаемся сдвинуть правый указатель максимально далеко.</p>
+  <p>Ставим правый указатель на следующий элемент и сравниваем его с предыдущим. Если они отличаются на 1 значит берем этот элемент в наше плавающее окно, иначе этот элемент уже не берем в наше плавающее окно и останавливаемся.</p>
+  <p>Теперь нужно добавить в ответ это плавающее окно. Сравниваем два указателя. Если они одинаковый, то это один элемент и просто добавляем его в ответ. Если они разные, то это диапазон элементов и добавляем его в ответ со стрелочкой "->"</p>
+  <p>Переходим к следующему плавающему окну. Передвигаем левый и правый указатель на следующий элемент после предыдущего плавающего окна.</p>
+  <details>
+    <summary>Код на javascript</summary>
+<pre>
+function summaryRanges(nums) {
+    let l = 0;
+    let r = 0;
+    let result = [];
+    while (l &lt; nums.length) {
+        // before
+        // l
+        // 1 2 3 5 7 8
+        // r
+
+        // бежим правым указателем пока в интервале [l, r]
+        // находятся все последовательные числа
+        while (r + 1 &lt; nums.length && nums[r] + 1 === nums[r + 1]) {
+            r += 1;
+        }
+        // after
+        // l
+        // 1 2 3 5 7 8
+        //     r
+        // бежим правым указателем
+
+        // добавлем в ответ
+        if (r !== l) {
+            result.push(`${nums[l]}->${nums[r]}`);
+        } else {
+            result.push(`${nums[l]}`);
+        }
+
+        // интервалы не пересекаются, поэтому сдвигаем
+        // на r + 1 - именно отсюда будет начинаться
+        // следующий интервал
+        l = r + 1;
+        r = r + 1;
+    }
+    return result;
+};
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+    # time: O(n)
+    # mem:  O(n), без учета памяти на ответ O(1)
+    def summaryRanges(self, nums: List[int]) -> List[str]:
+        l = 0
+        r = 0
+        result = []
+        while l &lt; len(nums):
+            # before
+            # l
+            # 1 2 3 5 7 8
+            # r
+
+            # бежим правым указателем пока в интервале [l, r]
+            # находятся все последовательные числа
+            while r + 1 &lt; len(nums) and nums[r] + 1 == nums[r + 1]:
+                r += 1
+            # after
+            # l
+            # 1 2 3 5 7 8
+            #     r
+            # бежим правым указателем
+
+            # добавлем в ответ
+            if r != l:
+                result.append(f'{nums[l]}->{nums[r]}')
+            else:
+                result.append(f'{nums[l]}')
+
+            # интервалы не пересекаются, поэтому сдвигаем
+            # на r + 1 - именно отсюда будет начинаться
+            # следующий интервал
+            l = r + 1
+            r = r + 1
+        return result
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на go</summary>
+<pre>
+func summaryRanges(nums []int) []string {
+	l := 0
+	r := 0
+	result := []string{}
+	for l &lt; len(nums) {
+		// before
+		// l
+		// 1 2 3 5 7 8
+		// r
+
+		// бежим правым указателем пока в интервале [l, r]
+		// находятся все последовательные числа
+		for r+1 &lt; len(nums) && nums[r]+1 == nums[r+1] {
+			r += 1
+		}
+		// after
+		// l
+		// 1 2 3 5 7 8
+		//     r
+		// бежим правым указателем
+
+		// добавлем в ответ
+		if r != l {
+			result = append(result, fmt.Sprintf("%d->%d", nums[l], nums[r]))
+		} else {
+			result = append(result, fmt.Sprintf("%d", nums[l]))
+		}
+
+		// интервалы не пересекаются, поэтому сдвигаем
+		// на r + 1 - именно отсюда будет начинаться
+		// следующий интервал
+		l = r + 1
+		r = r + 1
+	}
+	return result
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на C++</summary>
+<pre>
+class Solution {
+public:
+    // time: O(n)
+    // mem:  O(n), без учета памяти на ответ O(1)
+    vector<string> summaryRanges(vector<int>& nums) {
+        int l = 0;
+        int r = 0;
+        vector<string> result;
+        while (l &lt; nums.size()) {
+            // before
+            // l
+            // 1 2 3 5 7 8
+            // r
+
+            // бежим правым указателем пока в интервале [l, r]
+            // находятся все последовательные числа
+            while (r + 1 &lt; nums.size() && nums[r] + 1 == nums[r + 1]) {
+                r += 1;
+            }
+            // after
+            // l
+            // 1 2 3 5 7 8
+            //     r
+            // бежим правым указателем
+
+            // добавлем в ответ
+            if (r != l) {
+                result.push_back(to_string(nums[l]) + "->" + to_string(nums[r]));
+            } else {
+                result.push_back(to_string(nums[l]));
+            }
+
+            // интервалы не пересекаются, поэтому сдвигаем
+            // на r + 1 - именно отсюда будет начинаться
+            // следующий интервал
+            l = r + 1;
+            r = r + 1;
+        }
+        return result;
+    }
+};
+</pre>
+  </details>
+
+<details>
+  <summary>Код на java</summary>
+<pre>
+class Solution {
+    public List&lt;String&gt; summaryRanges(int[] nums) {
+        List&lt;String&gt; result = new ArrayList&lt;&gt;();
+        int l = 0;
+        int r = 0;
+        while (l &lt; nums.length) {
+            // before
+            // l
+            // 1 2 3 5 7 8
+            // r
+
+            // бежим правым указателем пока в интервале [l, r]
+            // находятся все последовательные числа
+            while (r + 1 &lt; nums.length && nums[r] + 1 == nums[r + 1]) {
+                r += 1;
+            }
+            // after
+            // l
+            // 1 2 3 5 7 8
+            //     r
+            // бежим правым указателем
+
+            // добавлем в ответ
+            if (r != l) {
+                result.add(nums[l] + "->" + nums[r]);
+            } else {
+                result.add(String.valueOf(nums[l]));
+            }
+
+            // интервалы не пересекаются, поэтому сдвигаем
+            // на r + 1 - именно отсюда будет начинаться
+            // следующий интервал
+            l = r + 1;
+            r = r + 1;
+        }
+        return result;
+    }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -335,5 +561,346 @@ func maxSum(nums []int, k int) int {
   <code>Output: 2 // [1,1,0,1]</code>
 
   <h4>Паттерн пересекающиеся плавающие окна</h4>
+</article>
+
+
+<!-- Паттерн плавающее окно фиксированного размера -->
+<article class="article">
+  <div class="anchor" id="fix"></div>
+  <h3>Паттерн плавающее окно фиксированного размера</h3>
+
+  <h4>Алгоритм работы с плавающим окном фиксированного размера</h4>
+  <code>3, 2, 5, 9, 4, 1</code>
+
+  <ol>
+    <li>Работаем с первыми k элементами</li>
+    <li>Определяем оптимальный алгоритм перехода</li>
+  </ol>
+</article>
+
+
+<!-- Задача 5. Максимальное произведение -->
+<article class="article">
+  <div class="anchor" id="task5"></div>
+  <h3>Задача 5. Максимальное произведение</h3>
+
+  <p>На вход приходит последовательность чисел nums и число k. Найти максимальное произведение k подряд идущих чисел</p>
+  <p>В последовательности могут быть нули</p>
+
+  <h4>Пример</h4>
+  <code>Input nums = [4, 0, 5, 2, 4, 1, 0]</code>
+  <code>Output 40 // 5*2*4</code>
+
+  <h4>Идея решения</h4>
+  <ol>
+    <li>Подсчитывать произведение ненулевых элементов</li>
+    <li>Подсчитывать число нулей внутри плавающего окна</li>
+  </ol>
+
+  <h4>Работаем с первыми k элементами</h4>
+  <p>Произведение внутри плавающего окна равно произведению ненулевых элементов, если количество нулей равно нулю. Произведение равно нулю если количество нулей больше нуля</p>
+  <p>Нужно три переменные. Переменная max хранит максимальное произведение k элементов. Переменная cur хранит текущее произведение k ненулевых элементов. Переменная count хранит количество нулей среди k элементов.</p>
+
+  <h4>Определяем оптимальный алгоритм перехода</h4>
+  <p>При переходе к следующему окну нужно проверять элемент, который выходит из окна и элемент, который приходит в окно.</p>
+  <p>Если выходящий из окна элемент ненулевой, то текущее произведение ненулевых элементов делим на этот элемент. Если приходящий в окно элемент ненулевой, то текущее произведение умнажаем на этот элемент. Количество нулей остается таким же</p>
+  <p>Если выходящий из окна элемент нулевой, то из количества нулей отнимаем 1. Если следующий элемент нулевой, то к количеству нулей прибавляем 1.</p>
+
+  <p>Сложность по времени O(N)</p>
+  <p>Сложность по памяти O(1)</p>
+</article>
+
+
+<!-- Задача 6. Сжатие строки -->
+<article class="article">
+  <div class="anchor" id="task6"></div>
+  <h3>Задача 5. Сжатие строки</h3>
+
+  <h4>Leetcode 443. String Compression</h4>
+
+  <p>Дан массив chars и нужно реализовать алгоритм сжатия строки по следующим правилам</p>
+  <ol>
+    <li>Подряд идущие одинаковые символы группируются</li>
+    <li>Группа включает в себя всегда максимально возможное число одинаковых подряд идущих символов</li>
+    <li>Если в группе только одна буква, то пишется только она</li>
+    <li>Если в группе более одной буквы, то пишется сначала буква, а потом число раз которое она встретилась</li>
+    <li>Если буква встретилась более 9 раз, то каждый символ количества должен быть записан отдельно</li>
+  </ol>
+
+  <h4>Пример 1</h4>
+  <code>Input chars = ["x", "x", "y", "z", "z", "z"]</code>
+  <code>Output ["x", "2", "y", "z", "3"]</code>
+
+  <h4>Пример 2</h4>
+  <code>Input chars = ["y","x","x","x","x","x","x","x","x","x","x","x","x","y","y"]</code>
+  <code>Output ["y", "x", "1", "2", "y", "2"]</code>
+
+  <h4>Пример 3</h4>
+  <code>Input chars = ["a","b","c"]</code>
+  <code>Output chars = ["a","b","c"]</code>
+
+  <h4>Паттерн не пересекающиеся плавающие окна</h4>
+
+  <h4>Идея решения</h4>
+  <h4>Обрабатываем элементы первого плавающего окна</h4>
+  <p>Заведем левый и правый указатель. Поставим их на первый элемент. Плавающее окно содержит элементы [l, r] от l до r включительно.</p>
+  <p>Первая стадия. Мы смотрим на элемент под правым указателем и сравниваем со следующим элементом. Если они равны то сдвигаем вправо правый указатель. Если они не равны, то мы останавливаемся. Мы подвинули правый указатель максимально далеко.</p>
+  <p>Вторая стадия добавления в ответ.</p>
+  <h4>Переходим к следующему окну</h4>
+  <p>Левый и правый указатель поставим за границу предыдущего окна на следующий элемент. Следующее окно будет после текущего и они никогда не пересекутся</p>
+
+  <p>Сложность по времени O(N)</p>
+  <p>Сложность по памяти O(N). В памяти дополнительно хранится только результат. Если результат хранить не надо, то O(1)</p>
+
+  <details>
+    <summary>Код на javascript</summary>
+<pre>
+function compress(chars) {
+    let l = 0;
+    let r = 0;
+    let result = [];
+    while (l &lt; chars.length) {
+        // before
+        // l
+        // a a a b b a a
+        // r
+
+        // бежим правым указателем пока в интервале [l, r]
+        // находятся все одинаковые символы
+        while (r + 1 &lt; chars.length && chars[r] === chars[r + 1]) {
+            r++;
+        }
+        // after
+        // l
+        // a a a b b a a
+        //     r
+
+        // обновляем ответ
+        let windowSize = r - l + 1;
+        if (windowSize === 1) {
+            result.push(chars[r]);
+        } else {
+            result.push(chars[r]);
+            result.push(...String(windowSize).split(''));
+        }
+
+        // интервалы не пересекаются, поэтому сдвигаем
+        // на r + 1 - именно отсюда будет начинаться
+        // следующий интервал
+        l = r + 1;
+        r = r + 1;
+    }
+    return result;
+};
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+class Solution:
+    # time: O(n)
+    # mem:  O(n), если сразу модифицировать массив chars то получим O(1)
+    def compress(self, chars: List[str]) -> List[str]:
+        l = 0
+        r = 0
+        result = []
+        while l &lt; len(chars):
+            # before
+            # l
+            # a a a b b a a
+            # r
+
+            # бежим правым указателем пока в интервале [l, r]
+            # находятся все одинаковые символы
+            while r + 1 &lt; len(chars) and chars[r] == chars[r + 1]:
+                r += 1
+            # after
+            # l
+            # a a a b b a a
+            #     r
+
+            # обновляем ответ
+            windowSize = r - l + 1
+            if windowSize == 1:
+                result.append(chars[r])
+            else:
+                result.append(chars[r])
+                result += list(str(windowSize))
+
+            # интервалы не пересекаются, поэтому сдвигаем
+            # на r + 1 - именно отсюда будет начинаться
+            # следующий интервал
+            l = r + 1
+            r = r + 1
+
+        return result
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на go</summary>
+<pre>
+func compress(chars []rune) []rune {
+	l := 0
+	r := 0
+	result := []rune{}
+	for l &lt; len(chars) {
+		// before
+		// l
+		// a a a b b a a
+		// r
+
+		// бежим правым указателем пока в интервале [l, r]
+		// находятся все одинаковые символы
+		for r+1 &lt; len(chars) && chars[r] == chars[r+1] {
+			r++
+		}
+		// after
+		// l
+		// a a a b b a a
+		//     r
+
+		// обновляем ответ
+		windowSize := r - l + 1
+		result = append(result, chars[r])
+    if windowSize > 1 {
+			result = append(result, []rune(strconv.Itoa(windowSize))...)
+		}
+
+		// интервалы не пересекаются, поэтому сдвигаем
+		// на r + 1 - именно отсюда будет начинаться
+		// следующий интервал
+		l = r + 1
+		r = r + 1
+	}
+	return result
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на C++</summary>
+<pre>
+class Solution {
+public:
+    // time: O(n)
+    // mem:  O(n), если сразу модифицировать массив chars то получим O(1)
+    vector&lt;char&gt; compress(vector&lt;char&gt;& chars) {
+        int l = 0;
+        int r = 0;
+        vector&lt;char&gt; result;
+        while (l &lt; chars.size()) {
+            // before
+            // l
+            // a a a b b a a
+            // r
+
+            // бежим правым указателем пока в интервале [l, r]
+            // находятся все одинаковые символы
+            while (r + 1 &lt; chars.size() && chars[r] == chars[r + 1]) {
+                r++;
+            }
+            // after
+            // l
+            // a a a b b a a
+            //     r
+
+            // обновляем ответ
+            int windowSize = r - l + 1;
+            result.push_back(chars[r]);
+            if (windowSize > 1) {
+                for (auto c : to_string(windowSize)) {
+                    result.push_back(c);
+                }
+            }
+
+            // интервалы не пересекаются, поэтому сдвигаем
+            // на r + 1 - именно отсюда будет начинаться
+            // следующий интервал
+            l = r + 1;
+            r = r + 1;
+        }
+        return result;
+    }
+};
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на java</summary>
+<pre>
+class Solution {
+    // time: O(n)
+    // mem:  O(n), если сразу модифицировать массив chars то получим O(1)
+    public List&lt;Character&gt; compress(List&lt;Character&gt; chars) {
+        int l = 0;
+        int r = 0;
+        List&lt;Character&gt; result = new ArrayList&lt;&gt;();
+        while (l &lt; chars.length) {
+            // before
+            // l
+            // a a a b b a a
+            // r
+
+            // бежим правым указателем пока в интервале [l, r]
+            // находятся все одинаковые символы
+            while (r + 1 &lt; chars.size() && chars.get(r).equals(chars.get(r + 1))) {
+                r++;
+            }
+            // after
+            // l
+            // a a a b b a a
+            //     r
+
+            // обновляем ответ
+            int windowSize = r - l + 1;
+            result.add(chars[r]);
+            if (windowSize > 1) {
+                for (char c : String.valueOf(windowSize).toCharArray()) {
+                    result.add(c);
+                }
+            }
+
+            // интервалы не пересекаются, поэтому сдвигаем
+            // на r + 1 - именно отсюда будет начинаться
+            // следующий интервал
+            l = r + 1;
+            r = r + 1;
+        }
+        return result;
+    }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 6. Сжатие строки -->
+<article class="article">
+  <div class="anchor" id="slide"></div>
+  <h3>Паттерн не пересекающиеся плавающие окна</h3>
+
+  <h4>Алгоритм работы с не пересекающимися окнами</h4>
+
+  <code>x, x, y, z, z, z</code>
+
+  <h4>Код на python</h4>
+<pre>
+def some(nums: List[int]) -> ReturnType:
+  l = 0
+  r = 0
+  result = []
+  while l &lt; len(nums):
+      while r + 1 &lt; len(nums) and условие_продолжения_окна:
+          r += 1
+      // обработка текущего окна и обновление результата
+
+      // сдвиг указателей для следующего окна
+      l = r + 1
+      r = r + 1
+
+  return result
+</pre>
 </article>
 
