--- a/src/components/code/code-c/pages/elem-c.html
+++ b/src/components/code/code-c/pages/elem-c.html
@@ -7,16 +7,30 @@
 
   <p><a href="#direct">Директивы препроцессора</a></p>
   <p><a href="#var">Переменные</a></p>
+  <ol>
+    <li><a href="#var1">Объявление переменной</a></li>
+    <li><a href="#var2">Ключевые слова при объявлении переменных</a></li>
+    <li><a href="#var3">Область видимости</a></li>
+    <li><a href="#var4">Массив переменных</a></li>
+    <li><a href="#var5">Константа const</a></li>
+    <li><a href="#var6">Перечисление констант enum</a></li>
+  </ol>
   <p><a href="#types">Типы данных</a></p>
   <ol>
-    <li><a href="#types1">Символьный тип</a></li>
-    <li><a href="#types2">Целочисленные типы</a></li>
+    <li><a href="#types1">Символьные типы char, wchar_t</a></li>
+    <li><a href="#types2">Целочисленные типы (integer types)</a></li>
     <li><a href="#types2">Суффиксы целочисленных типов</a></li>
     <li><a href="#types3">Платформонезависимые типы данных</a></li>
-    <li><a href="#types4">Вещественные типы данных</a></li>
+    <li><a href="#types4">Вещественные типы данных float, double</a></li>
     <li><a href="#types5">Тип без значения void</a></li>
-    <li><a href="#sizeof">Размер типа данных</a></li>
-    <li><a href="#types6">Преобразование типов</a></li>
+    <li><a href="#sizeof">Размер типа данных sizeof()</a></li>
+    <li>
+      <a href="#types6">Преобразование типов</a>
+      <ol>
+        <li><a href="#types61">Неявное преобразование</a></li>
+        <li><a href="#types62">Явное преобразование (приведение)</a></li>
+      </ol>
+    </li>
   </ol>
   <p><a href="#point">Указатели</a></p>
   <p><a href="#lex">Лексемы языка Си</a></p>
@@ -95,8 +109,13 @@
   <h3>Переменные</h3>
 
   <p>Переменная это контейнер для хранения данных. Данные хранятся в памяти компьютера в двоичном виде. Переменная любого типа будет записана в память компьютера в двоичном виде.</p>
+</article>
 
-  <h4>Объявление переменной</h4>
+
+<!-- Объявление переменной -->
+<article class="article">
+  <div class="anchor" id="var1"></div>
+  <h3>Объявление переменной</h3>
 
   <p>Перед использованием переменной ее надо объявить, иначе будет ошибка и программа не скомпилируется.</p>
 
@@ -119,14 +138,21 @@
 
   <h4>Переменная ссылочного типа</h4>
   <p>Переменная <strong>ссылочного типа</strong> по <strong>адресу переменной</strong> хранит другой адрес на место в памяти, где хранится ее значение. При объявлении переменной ссылочного типа компилятор выделяет в памяти 8 байт для хранения адреса. Переменные ссылочного типа всегда занимают одинаковый размер, потому что хранят только адрес.</p>
+</article>
 
-  <h4>Ключевые слова при объявлении переменных</h4>
+
+<!-- Ключевые слова при объявлении переменных -->
+<article class="article">
+  <div class="anchor" id="var2"></div>
+  <h3>Ключевые слова при объявлении переменных</h3>
+
   <p>При объявлении переменных можно использовать одно из пяти ключевых слов:</p>
   <ol>
     <li>
       <h4>auto</h4>
-      <p>Создает переменную с ограниченной областью видимости. Переменная объявляется внутри функции и доступна только внутри этой функции. Современный стандарт делает все переменные объявленные внутри функции доступными только внутри этой функции. Поэтому нет необходимости использовать ключевое слово <strong>auto</strong>. Но оно осталось в языке для совместимости со старыми программами.</p>
+      <p>Создает переменную с ограниченной областью видимости. Переменная объявляется внутри функции и доступна только внутри этой функции. </p>
       <code>auto char a;</code>
+      <p><em>Современный стандарт делает все переменные объявленные внутри функции доступными только внутри этой функции. Поэтому нет необходимости использовать ключевое слово <strong>auto</strong>. Но оно осталось в языке для совместимости со старыми программами.</em></p>
     </li>
     <li>
       <h4>extern</h4>
@@ -140,18 +166,26 @@
     </li>
     <li>
       <h4>register</h4>
-      <p>Дает указание компилятору создать переменную в регистре компьютера для быстрого доступа к ней. Так можно объявить только локальные переменные, их число строго ограничено и переменные могут быть только определенных типов. Компиляторы игнорируют это указание если не могут поместить переменные в регистры. В современном стандарте это слово уже не используют и оно осталось лишь для совместимости со старыми программами</p>
+      <p>Дает указание компилятору создать переменную в регистре компьютера для быстрого доступа к ней. Так можно объявить только локальные переменные, их число строго ограничено и переменные могут быть только определенных типов. Компиляторы игнорируют это указание если не могут поместить переменные в регистры.</p>
       <code>register int num = 100;</code>
+      <p><em>В современном стандарте это слово уже не используют и оно осталось лишь для совместимости со старыми программами.</em></p>
       <p>Если для переменной, объявленной с помощью ключевого слова register использовать операцию &, компилятор разместит переменную в памяти компьютера, а не в регистре</p>
     </li>
     <li>
       <h4>volatile</h4>
-      <p>Противоположно слову registr. Дает указание компилятору что переменную нельзя помещать в регистр, так как она может в любой момент поменять свое значение. В современном стандарте это слово уже не используют и оно осталось лишь для совместимости со старыми программами</p>
+      <p>Противоположно слову register. Дает указание компилятору что переменную нельзя помещать в регистр, так как она может в любой момент поменять свое значение.</p>
       <code>volatile char d = 'Q';</code>
+      <p><em>В современном стандарте это слово уже не используют и оно осталось лишь для совместимости со старыми программами.</em></p>
     </li>
   </ol>
+</article>
 
-  <h4>Область видимости</h4>
+
+<!-- Область видимости -->
+<article class="article">
+  <div class="anchor" id="var3"></div>
+  <h3>Область видимости</h3>
+
   <p><strong>Область видимости</strong> переменной это место в программе, где доступна данная переменная</p>
 
   <h4>Локальные переменные</h4>
@@ -172,6 +206,95 @@
 </article>
 
 
+<!-- Массив переменных -->
+<article class="article">
+  <div class="anchor" id="var4"></div>
+  <h3>Массив переменных</h3>
+
+  <p>Массив переменных хранит несколько элементов данных в отличие от обычных переменных, которые могут хранить только один элемент. Элементы данных хранятся последовательно в ячейках массива, которые нумеруются начиная с нуля.</p>
+
+  <h4>Объявление массива</h4>
+  <p>Перед использованием массива его надо объявить, иначе будет ошибка и программа не скомпилируется.</p>
+  <p>При объявлении массива сначала указывается тип переменных, которые он будет хранить, потом имя массива, потом в квадратных скобках количество элементов в массиве - размер</p>
+  <code>int nums[3];</code>
+
+  <p>Объявление нескольких переменных одного типа можно выполнить через запятую</p>
+  <code>int nums[3], nums2[6], nums3[9];</code>
+
+  <p>Если не присваивать значения при объявлении, то в массиве будет храниться "мусор" - данные, оставшиеся в памяти от других программ.</p>
+  <p>При объявлении <strong>массива</strong> определяется <strong>адрес массива</strong> в памяти и <strong>число байт</strong> для хранения массива. Адрес массива указывает на первый байт.</p>
+
+  <p>Если при объявлении массива сразу его <strong>инициализировать</strong>, то в <strong>объявлении массива</strong> можно оставить квадратные скобки пустыми и не писать в них размер. В таком случае размер массива будет определен автоматически.</p>
+  <code>int nums[] = {1, 2, 3, 4};</code>
+
+  <h4>Инициализация массива</h4>
+  <p><strong>Инициализация массива</strong> это присвоение значений элементам массива в первый раз. Инициализацию можно выполнить при объявлении массива</p>
+  <code>int nums[3] = [10, 20, 30];</code>
+  <p>После объявления массива можно проинициализировать только его отдельные элементы, а не весь массив сразу</p>
+  <code>int nums2[3];</code>
+  <code>nums2[0] = 40;</code>
+
+  <h4>Текстовые строки в массиве типа char</h4>
+  <p>Создадим массив типа char. Это массив символов</p>
+  <code>char sym = {'a', 'b', 'c'}; // массив символов</code>
+
+  <p>Чтобы создать строку, надо в конец массива типа char поместить символ-терминатор '\0'.</p>
+  <code>char str = {'a', 'b', 'c', '\0'}; // строка</code>
+</article>
+
+
+<!-- Константа const -->
+<article class="article">
+  <div class="anchor" id="var5"></div>
+  <h3>Константа const</h3>
+
+  <p>Если значение переменной никогда меняться не будет, то ее надо объявлять с ключевым словом const и инициализировать при объявлении. Такая переменная называется константа.</p>
+  <code>const int MILLION = 1000000;</code>
+
+  <p>Если элементы массива никогда не будут меняться, то массив тоже надо объявлять с ключевым словом const и инициализировать при объявлении.</p>
+  <code>const int FIVE[] = {1, 2, 3, 4, 5};</code>
+</article>
+
+
+<!-- Перечисление констант enum -->
+<article class="article">
+  <div class="anchor" id="var6"></div>
+  <h3>Перечисление констант enum</h3>
+
+  <p>Ключевое слово enum создает удобное <strong>перечисление</strong> целочисленных констант. Для объявления последовательности констант надо написать ключевое слово <strong>enum</strong>, после этого можно написать <strong>имя перечисления</strong>, а можно и не писать. Затем в фигурных скобках пишут имена констант через запятую.</p>
+  <code>enum {MON, TUE, WED, THU, FRI}; // MON = 0, TUE = 1 ...</code>
+
+  <p>Если значения констант не указаны, то первая будет иметь значение 0, а каждая следующая на 1 больше</p>
+
+  <code>enum days{MON = 1, TUE, WED, THU = 30, FRI}; // MON = 1, TUE = 2 ... FRI = 31</code>
+  <p>При объявлении любой константе может быть присвоено свое значение. Тогда следующая константа без значения будет на 1 больше</p>
+
+  <code>enum {NIL = 0, NONE = 0};</code>
+  <p>Константы в перечислении могут содержать одинаковые значения</p>
+</article>
+
+
+<!-- Создание константного типа -->
+<article class="article">
+  <div class="anchor" id="var7"></div>
+  <h3>Создание константного типа</h3>
+
+  <p>Можно создавать новые типы данных с помощью перечислений enum. Перечисление enum должно иметь имя, чтобы у нового типа данных тоже было имя. Свойствами такого типа данных будут имена констант и связанные с ними значения.</p>
+  <p>Создадим перечисление, которое будет новым типом данных</p>
+  <code>enum month {JAN = 1, FEB, MAR};</code>
+
+  <p>Объявим переменную season с типом enum month, которая способна хранить значения перечисления, определяемого этим типом</p>
+  <code>enum month season;</code>
+
+  <p>Переменную типа перечисления можно создать при объявлении enum, после него</p>
+  <p>Объявим перечисление и создадим переменную day с типом enum days</p>
+  <code>enum days {MON, TUE, WED} day;</code>
+
+  <p>Создадим переменную flag с типом enum BOOLEAN</p>
+  <code>enum BOOLEAN {FALSE, TRUE} flag;</code>
+</article>
+
+
 <!-- Типы данных -->
 <article class="article">
   <div class="anchor" id="types"></div>
@@ -181,10 +304,10 @@
 </article>
 
 
-<!-- Символьные типы -->
+<!-- Символьные типы char, wchar_t -->
 <article class="article">
   <div class="anchor" id="types1"></div>
-  <h3>Символьные типы</h3>
+  <h3>Символьные типы char, wchar_t</h3>
 
   <h4>char</h4>
   <p>Занимает в памяти 1 байт</p>
@@ -196,7 +319,7 @@
 </article>
 
 
-<!-- Целочисленные типы -->
+<!-- Целочисленные типы (integer types) -->
 <article class="article">
   <div class="anchor" id="types2"></div>
   <h3>Целочисленные типы (integer types)</h3>
@@ -282,10 +405,10 @@
 </article>
 
 
-<!-- Вещественные типы данных -->
+<!-- Вещественные типы данных float, double -->
 <article class="article">
   <div class="anchor" id="types4"></div>
-  <h3>Вещественные типы данных</h3>
+  <h3>Вещественные типы данных float, double</h3>
 
   <p>Модификатор длины: <strong>long</strong></p>
 
@@ -324,15 +447,15 @@
 </article>
 
 
-<!-- Размер типа данных -->
+<!-- Размер типа данных sizeof() -->
 <article class="article">
   <div class="anchor" id="sizeof"></div>
-  <h3>Размер типа данных</h3>
+  <h3>Размер типа данных sizeof()</h3>
 
-  <p>Размер типа данных можно узнать с помощью оператора sizeof()</p>
+  <p>Размер типа данных можно узнать с помощью оператора sizeof(). Оператор sizeof() принимает тип данных и возвращает количество байт.</p>
   <code>printf("%d", sizeof(int)); // 4</code>
 
-  <p>Так же можно узнать размер переменной</p>
+  <p>Так же можно узнать размер переменной. Оператор sizeof() принимает переменную и возвращает количество байт</p>
   <code>int a = 100;</code>
   <code>printf("%d", sizeof(a)); // 4</code>
 
@@ -387,8 +510,13 @@
 <article class="article">
   <div class="anchor" id="types6"></div>
   <h3>Преобразование типов</h3>
+</article>
 
-  <h4>Неявное преобразование</h4>
+
+<!-- Неявное преобразование -->
+<article class="article">
+  <div class="anchor" id="types61"></div>
+  <h3>Неявное преобразование</h3>
 
   <p><strong>Неявное преобразование</strong> компилятор выполняет сам в двух случаях.</p>
   <ol>
@@ -400,8 +528,13 @@
 
   <p>Из двух переменных, произойдет неявное преобразование к типу который левее</p>
   <code>long double -- double -- float -- unsigned long int -- long -- unsigned -- int</code>
+</article>
 
-  <h4>Явное преобразование (приведение)</h4>
+
+<!-- Явное преобразование (приведение) -->
+<article class="article">
+  <div class="anchor" id="types62"></div>
+  <h3>Явное преобразование (приведение)</h3>
 
   <p><strong>Явное преобразование</strong> приводит данные к нужному типу, после эти значения участвуют в операциях.</p>
   <p>Синтаксис приведения</p>
@@ -413,6 +546,20 @@
   <code>char -- short -- int -- long</code>
   <code>unsigned char -- unsigned short -- unsigned int -- unsigned long</code>
   <code>float -- double -- long double</code>
+
+  <p><strong>Приведение</strong> не изменяет исходный тип данных переменной, выполняется копирование ее значения в переменную, имеющую другой тип данных</p>
+
+  <h4>Приведение float к int</h4>
+  <code>int a = (int)5.75; // 5</code>
+  <p>Берется только значение переменной типа float до запятой</p>
+
+  <h4>Приведение int к char</h4>
+  <code>char a = (char)257; // 1</code>
+  <p>Берется только значение переменной типа int в первом байте (от 0 до 255)</p>
+
+  <h4>Приведение double к float</h4>
+  <code>float a = (float)0.1234567; // 0.123457</code>
+  <p>Значение переменной типа double округляется в шестом знаке после запятой</p>
 </article>
 
 
@@ -505,14 +652,14 @@
     </li>
     <li>
       <h4>Классы памяти</h4>
-      <p>auto, extern, register, static</p>
+      <p>auto, extern, register, static, volatile</p>
     </li>
     <li>
       <h4>Операторы</h4>
       <p>break, case, continue, default, do, else, for, goto, if, return, sizeof, switch, typedef, while</p>
     </li>
   </ol>
-  <p>const, signed, volatile</p>
+  <p>const, signed</p>
 </article>
 
 
